# my_rust

./: .gitignore  Cargo.toml  build.rs  config.yml  log4rs.yaml
src/: conf.rs  main.rs  red.rs
ui/: debug.slint
