[package]
name = "my-project"
version = "0.1.0"
authors = ["罗颖 <luoy@cnns.net>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
time = "0.1.12"
regex = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"
serde_yaml = "0.8"
[build-dependencies]
slint-build = "1.4"
