[package]
name = "my-project"
version = "0.1.0"
authors = ["罗颖 <luoy@cnns.net>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
time = "0.3.34"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"
log = "0.4.21"
log4rs = "1.3.0"
config = "0.14.0"

[build-dependencies]
slint-build = "1.4"
